--- a/FrostsparkAPI/FrostsparkAPI.csproj
+++ b/FrostsparkAPI/FrostsparkAPI.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BaseEntity.cs" />
     <Compile Include="Classes\BaseEvent.cs" />
     <Compile Include="Frostspark.cs" />
     <Compile Include="Classes\BaseServer.cs" />
     <Compile Include="Interfaces\ICommandSender.cs" />
     <Compile Include="Classes\BasePlayer.cs" />
     <Compile Include="Classes\BasePlayerList.cs" />
+    <Compile Include="Interfaces\ITeleportable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
