--- a/FrostsparkAPI/FrostsparkAPI.csproj
+++ b/FrostsparkAPI/FrostsparkAPI.csproj
@@ -43,6 +43,11 @@
   <ItemGroup>
     <Compile Include="Classes\BaseEntity.cs" />
     <Compile Include="Classes\BaseEvent.cs" />
+    <Compile Include="Packets\BasePacket.cs" />
+    <Compile Include="Events\PlayerAssignSlotEvent.cs" />
+    <Compile Include="Events\PlayerConnectEvent.cs" />
+    <Compile Include="Events\PlayerUpdateCharacterEvent.cs" />
+    <Compile Include="Events\PlayerUpdateMovementEvent.cs" />
     <Compile Include="Frostspark.cs" />
     <Compile Include="Classes\BaseServer.cs" />
     <Compile Include="Interfaces\ICommandSender.cs" />
@@ -52,8 +57,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Events\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
