--- a/FrostsparkAPI/FrostsparkAPI.csproj
+++ b/FrostsparkAPI/FrostsparkAPI.csproj
@@ -42,16 +42,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Classes\EntityList.cs" />
+    <Compile Include="Collections\EntityList.cs" />
     <Compile Include="Entities\Item.cs" />
+    <Compile Include="Events\Entities\EntitySpawnEvent.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Entities\NPC.cs" />
     <Compile Include="Entities\Projectile.cs" />
+    <Compile Include="Events\IAsynchronous.cs" />
+    <Compile Include="Events\ICancellable.cs" />
     <Compile Include="Packets\BasePacket.cs" />
-    <Compile Include="Events\PlayerAssignSlotEvent.cs" />
-    <Compile Include="Events\PlayerConnectEvent.cs" />
-    <Compile Include="Events\PlayerUpdateCharacterEvent.cs" />
-    <Compile Include="Events\PlayerUpdateMovementEvent.cs" />
+    <Compile Include="Events\Players\PlayerAssignSlotEvent.cs" />
+    <Compile Include="Events\Players\PlayerConnectEvent.cs" />
+    <Compile Include="Events\Players\PlayerUpdateCharacterEvent.cs" />
+    <Compile Include="Events\Players\PlayerUpdateMovementEvent.cs" />
     <Compile Include="Frostspark.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Interfaces\ICommandSender.cs" />
