--- a/FrostsparkAPI/FrostsparkAPI.csproj
+++ b/FrostsparkAPI/FrostsparkAPI.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Collections\EntityList.cs" />
+    <Compile Include="Entities\Interfaces\ILiving.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Events\Entities\EntitySpawnEvent.cs" />
     <Compile Include="Events\Event.cs" />
@@ -56,11 +57,13 @@
     <Compile Include="Events\Players\PlayerUpdateCharacterEvent.cs" />
     <Compile Include="Events\Players\PlayerUpdateMovementEvent.cs" />
     <Compile Include="Frostspark.cs" />
+    <Compile Include="Plugins\Plugin.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="Interfaces\ICommandSender.cs" />
+    <Compile Include="Entities\Interfaces\ICommandSender.cs" />
     <Compile Include="Entities\Player.cs" />
-    <Compile Include="Interfaces\ITeleportable.cs" />
+    <Compile Include="Entities\Interfaces\ITeleportable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Vector2D.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup />
