Begin designing plugin ecosystem

--- a/FrostsparkAPI/FrostsparkAPI.csproj
+++ b/FrostsparkAPI/FrostsparkAPI.csproj
@@ -51,13 +51,18 @@
     <Compile Include="Entities\Projectile.cs" />
     <Compile Include="Events\IAsynchronous.cs" />
     <Compile Include="Events\ICancellable.cs" />
+    <Compile Include="Logging\Logger.cs" />
     <Compile Include="Packets\BasePacket.cs" />
     <Compile Include="Events\Players\PlayerAssignSlotEvent.cs" />
     <Compile Include="Events\Players\PlayerConnectEvent.cs" />
     <Compile Include="Events\Players\PlayerUpdateCharacterEvent.cs" />
     <Compile Include="Events\Players\PlayerUpdateMovementEvent.cs" />
     <Compile Include="Frostspark.cs" />
+    <Compile Include="Plugins\Exceptions\IncompatibleAPIVersionException.cs" />
+    <Compile Include="Plugins\Exceptions\InvalidPluginException.cs" />
+    <Compile Include="Plugins\Exceptions\PluginAlreadyLoadedException.cs" />
     <Compile Include="Plugins\Plugin.cs" />
+    <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Entities\Interfaces\ICommandSender.cs" />
     <Compile Include="Entities\Player.cs" />
