--- a/FrostsparkAPI/FrostsparkAPI.csproj
+++ b/FrostsparkAPI/FrostsparkAPI.csproj
@@ -85,6 +85,10 @@
     <Compile Include="Collections\EntityList.cs" />
     <Compile Include="Entities\Interfaces\ILiving.cs" />
     <Compile Include="Entities\Item.cs" />
+    <Compile Include="Entities\Player.MovementData.ButtonInformation.cs" />
+    <Compile Include="Entities\Player.MovementData.cs" />
+    <Compile Include="Entities\Player.MovementData.MovementInformation.cs" />
+    <Compile Include="Entities\Player.PlayerData.cs" />
     <Compile Include="Events\Entities\EntitySpawnEvent.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Entities\NPC.cs" />
@@ -93,6 +97,10 @@
     <Compile Include="Events\EventManager.cs" />
     <Compile Include="Events\Interfaces\IAsynchronous.cs" />
     <Compile Include="Events\Interfaces\ICancellable.cs" />
+    <Compile Include="Events\Players\PlayerDisconnectEvent.cs" />
+    <Compile Include="Events\Players\PlayerKickEvent.cs" />
+    <Compile Include="Events\Players\PlayerTeleportEvent.cs" />
+    <Compile Include="Events\Players\PlayerUpdateInventoryEvent.cs" />
     <Compile Include="Events\Server\GameStartEvent.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Events\Players\PlayerAssignSlotEvent.cs" />
@@ -111,9 +119,12 @@
     <Compile Include="Entities\Player.cs" />
     <Compile Include="Entities\Interfaces\ITeleportable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Color.cs" />
     <Compile Include="Utilities\Vector2D.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Events\NPC\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
