--- a/FrostsparkAPI/FrostsparkAPI.csproj
+++ b/FrostsparkAPI/FrostsparkAPI.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Entities\Player.MovementData.cs" />
     <Compile Include="Entities\Player.MovementData.MovementInformation.cs" />
     <Compile Include="Entities\Player.PlayerData.cs" />
+    <Compile Include="Enums\TeleportEffectType.cs" />
     <Compile Include="Events\Entities\EntitySpawnEvent.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Entities\NPC.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="Entities\Player.cs" />
     <Compile Include="Entities\Interfaces\ITeleportable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structures\TeleportationInfo.cs" />
     <Compile Include="Utilities\Color.cs" />
     <Compile Include="Utilities\Vector2D.cs" />
     <Compile Include="Utils.cs" />
