Update assembly output name

--- a/Frostspark.API/Frostspark.API.csproj
+++ b/Frostspark.API/Frostspark.API.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Frostspark.API</RootNamespace>
-    <AssemblyName>FrostsparkAPI</AssemblyName>
+    <AssemblyName>Frostspark.API</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
