--- a/Frostspark.API/Frostspark.API.csproj
+++ b/Frostspark.API/Frostspark.API.csproj
@@ -1,149 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A8186A57-1D5D-455D-8C44-A8CC1FF0CB57}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Frostspark.API</RootNamespace>
-    <AssemblyName>Frostspark.API</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Collections\ProjectileList.cs" />
-    <Compile Include="Entities\Chest.cs" />
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Collections\EntityList.cs" />
-    <Compile Include="Entities\Interfaces\ILiving.cs" />
-    <Compile Include="Entities\DroppedItem.cs" />
-    <Compile Include="Entities\Player.MovementData.ButtonInformation.cs" />
-    <Compile Include="Entities\Player.MovementData.cs" />
-    <Compile Include="Entities\Player.MovementData.MovementInformation.cs" />
-    <Compile Include="Entities\Player.PlayerData.cs" />
-    <Compile Include="Enums\TeleportEffectType.cs" />
-    <Compile Include="Events\Chest\ChestCloseEvent.cs" />
-    <Compile Include="Events\Chest\ChestEvent.cs" />
-    <Compile Include="Events\Chest\ChestOpenEvent.cs" />
-    <Compile Include="Events\Chest\ChestRenameEvent.cs" />
-    <Compile Include="Events\Chest\ChestUpdateItemEvent.cs" />
-    <Compile Include="Events\Entities\EntityDespawnEvent.cs" />
-    <Compile Include="Events\Entities\EntityEvent.cs" />
-    <Compile Include="Events\Entities\EntitySpawnEvent.cs" />
-    <Compile Include="Events\Event.cs" />
-    <Compile Include="Entities\NPC.cs" />
-    <Compile Include="Entities\Projectile.cs" />
-    <Compile Include="Events\EventHandler.cs" />
-    <Compile Include="Events\EventManager.cs" />
-    <Compile Include="Events\Interfaces\IAsynchronous.cs" />
-    <Compile Include="Events\Interfaces\ICancellable.cs" />
-    <Compile Include="Events\Items\ItemEvent.cs" />
-    <Compile Include="Events\NPC\NPCEvent.cs" />
-    <Compile Include="Events\Players\PlayerDisconnectEvent.cs" />
-    <Compile Include="Events\Players\PlayerEvent.cs" />
-    <Compile Include="Events\Players\PlayerHitBlockEvent.cs" />
-    <Compile Include="Events\Players\PlayerKickEvent.cs" />
-    <Compile Include="Events\Players\PlayerPermissionEvent.cs" />
-    <Compile Include="Events\Players\PlayerTeleportEvent.cs" />
-    <Compile Include="Events\Players\PlayerUpdateInventoryEvent.cs" />
-    <Compile Include="Events\Server\GameStartEvent.cs" />
-    <Compile Include="Inventories\Inventory.cs" />
-    <Compile Include="Inventories\ItemStack.cs" />
-    <Compile Include="Logging\Logger.cs" />
-    <Compile Include="Events\Players\PlayerConnectEvent.cs" />
-    <Compile Include="Events\Players\PlayerUpdateCharacterEvent.cs" />
-    <Compile Include="Events\Players\PlayerUpdateMovementEvent.cs" />
-    <Compile Include="Frostspark.cs" />
-    <Compile Include="Plugins\Exceptions\IncompatibleAPIVersionException.cs" />
-    <Compile Include="Plugins\Exceptions\InvalidPluginException.cs" />
-    <Compile Include="Plugins\Exceptions\PluginAlreadyLoadedException.cs" />
-    <Compile Include="Plugins\Exceptions\PluginNotFoundException.cs" />
-    <Compile Include="Plugins\Plugin.cs" />
-    <Compile Include="Plugins\PluginManager.cs" />
-    <Compile Include="Server.cs" />
-    <Compile Include="Entities\Interfaces\ICommandSender.cs" />
-    <Compile Include="Entities\Player.cs" />
-    <Compile Include="Entities\Interfaces\ITeleportable.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Structures\TeleportationInfo.cs" />
-    <Compile Include="Utilities\Assert.cs" />
-    <Compile Include="Utilities\Color.cs" />
-    <Compile Include="Utilities\Extensions\FormattableStringExtensions.cs" />
-    <Compile Include="Utilities\Vector2D.cs" />
-    <Compile Include="Worlds\Tile.cs" />
-    <Compile Include="Worlds\TileLiquidType.cs" />
-    <Compile Include="Worlds\World.cs" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
